# gnonlin_ges_snippets

./: .gitignore  README
C/one_audioclip_1.0/: autogen.sh  configure.ac
C/one_audioclip_1.0/src/: snippet.c
C/two_videoclips_0.10/: configure.ac
C/two_videoclips_0.10/src/: snippet.c
C/two_videoclips_1.0/: Makefile.am  autogen.sh
C/two_videoclips_1.0/src/: Makefile.am  Makefile.in  snippet.c
python/: gnonlin-tutorial0.10.py  gnonlin-tutorial1.0.py  sample_snipet_0.10.py
